--- a/index.html
+++ b/index.html
@@ -37,17 +37,16 @@
       <!-- Lista de links -->
       <ul>
         <li>
-          <a href="#" target="_blank">Inscrever-se no NLW</a>
+          <a href="#" target="_blank">Link</a>
         </li>
         <li>
-          <a href="#" target="_blank">Baixar meu e-book</a>
+          <a href="#" target="_blank">Link</a>
         </li>
         <li>
-          <a href="#" target="_blank">Ver meu portfólio</a>
+          <a href="#" target="_blank">Link</a>
         </li>
         <li>
-          <a href="#" target="_blank">Conheça o Explorer</a
-          >
+          <a href="#" target="_blank">Link</a>
         </li>
       </ul>
 
